# warikan_easy_app

./: Cargo.toml  README.md  index.html  tsconfig.json
frontend/: index.html  script.js  script.js.map  script.ts
src/: lib.rs
