[package]
name = "warikan_easy_app"
version = "0.1.0"
authors = ["masaki-fox <masaki.saver@gmail.com>"]
description = "easy way to warikan"
license = "MIT/Apache-2.0"
repository = "https://github.com/masaki-fox/warikan_easy_app.git"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.108"